Fri Jul 10 14:41:34 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* marshal.c (r_object0): set encoding only if the encoding
	  is not US-ASCII.
Fri Jul 10 14:44:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (struct MT): ruby already assumes int has 32bit a
	  least, so no needs to use long.

	* random.c (rand_init):

Fri Jul 10 11:41:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_obj_{untrust,untrusted,trust}): added
	  prototypes.  [ruby-dev:38756]

Fri Jul 10 10:25:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_search_superclass): checks for implici
	  argument passing before method search.  [ruby-core:24244]

Fri Jul 10 07:22:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_data_type): typed.

Thu Jul  9 23:28:48 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/io.h (FMODE_STRIP_BOM): new constant.

	* io.c (io_encname_bom_p): judge whether the encoding name
	  is *-bom or not.
	  (parse_mode_enc): drop "-bom".
	  (rb_io_modestr_fmode): set FMODE_STRIP_BOM if needed.
	  (rb_io_extract_modeenc): ditto.
	  (io_strip_bom): strip bom if exists.
	  (io_set_encoding_by_bom): set encoding if there is bom.
	  Set encoding and strip bom when modeenc string is "r:foo-bom"
	  [ruby-dev:37236]

Thu Jul  9 21:56:59 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* marshal.c (r_object0): replace \u by u when the regexp is
	  made by Ruby 1.8. [ruby-dev:36750]

Wed Jul  8 23:13:54 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_div): omitted zero division check.

Wed Jul  8 21:00:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/irb/inspector.rb: forget svn add.

Wed Jul  8 19:10:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_check_type): rejects typed data.

Wed Jul  8 18:28:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c ({proc,binding,method}_data_type): typed.

Wed Jul  8 16:47:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
